# e_commerce_api

./: .env.example  .flake8  authentication.py  email.py  emails.py  main.py  models.py  pyproject.toml
templates/: verification.html
